--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
          <div class="navigation">
              <ul>
                  <i id="menu-close" class="fas fa-times"></i>
-                 <li><a href="#">Home</a></li>
-                 <li><a href="#">About</a></li>
+                 <li><a class="active" href="#">Home</a></li>
+                 <li><a href="about.html">About</a></li>
                  <li><a href="#">Hotels</a></li>
                  <li><a href="#">Tour Plans</a></li>
                  <li><a href="#">Contact</a></li>
