Photo and page added

--- a/about.html
+++ b/about.html
@@ -19,9 +19,9 @@
                  <i id="menu-close" class="fas fa-times"></i>
                  <li><a href="index.html">Home</a></li>
                  <li><a class="active" href="about.html">About</a></li>
-                 <li><a href="#">Hotels</a></li>
-                 <li><a href="#">Tour Plans</a></li>
-                 <li><a href="#">Contact</a></li>
+                 <li><a href="hotels.html">Hotels</a></li>
+                 <li><a href="tours.html">Tour Plans</a></li>
+                 <li><a href="contact.html">Contact</a></li>
              </ul>
              <img id="menu-btn" src="images/menu.png" alt="">
          </div>
@@ -30,7 +30,7 @@
      <!--   Home  -->
 
      <section id="about-home">
-         <h2>About Our CSKR Service</h2>
+         <h2>About Dream Tour</h2>
      </section>
 
      <section id="about-container">
@@ -39,23 +39,23 @@
          </div>
 
          <div class="about-text">
-             <h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente, quas quisquam.</h2>
+             <h2>You get to envision however beautiful and delightful nature is </h2>
 
-             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia nesciunt ex itaque sapiente nam beatae quibusdam eum, molestiae eligendi quos?</p>
+             <p>Looking for fun things to do nearby? The best weekend getaway deals? Or just need to get from A to B when you're traveling? Dream Tour is all of this and more. Best of all, everything's a few taps away.</p>
 
              <div class="about-fe">
                  <img src="images/fe1.png" alt="">
                  <div class="fe-text">
-                     <h5>30+ Tourisam Spots</h5>
-                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, ipsam!</p>
+                     <h5>The joy of discovery</h5>
+                     <p>Whatever brings you joy, "Dream Tour" helps you find it. From new dining experiences to life-changing treks at dawn - and a lot in between</p>
                  </div>
              </div>
 
              <div class="about-fe">
                 <img src="images/fe2.png" alt="">
                 <div class="fe-text">
-                    <h5>30+ Tourisam Spots</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, ipsam!</p>
+                    <h5>30+ Local know-how</h5>
+                    <p>We've got the insider tips for good times. No matter the what, where or when, our on-the-ground teams have you covered.</p>
                 </div>
             </div>
 
