--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                  <i id="menu-close" class="fas fa-times"></i>
                  <li><a class="active" href="#">Home</a></li>
                  <li><a href="about.html">About</a></li>
-                 <li><a href="#">Hotels</a></li>
-                 <li><a href="#">Tour Plans</a></li>
-                 <li><a href="#">Contact</a></li>
+                 <li><a href="hotels.html">Hotels</a></li>
+                 <li><a href="tours.html">Tour Plans</a></li>
+                 <li><a href="contact.html">Contact</a></li>
              </ul>
              <img id="menu-btn" src="images/menu.png" alt="">
          </div>
@@ -30,8 +30,8 @@
      <!--   Home  -->
 
      <section id="home">
-         <h2>Enhance Your Tour Exprerience With Us</h2>
-         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod quasi accusamus assumenda inventore expedita distinctio perspiciatis nemo earum ex sit, doloremque minima rerum deserunt necessitatibus unde magni adipisci totam officiis.</p>
+         <h2>Enhance Your Tour Exprerience With Dream Tour</h2>
+         <p>Tourism is a social, cultural and economic phenomenon which entails the movement of people to countries or places outside their usual environment for personal or business/professional purposes.</p>
          <div class="btn">
              <a href="#" class="blue">Learn More</a>
              <a href="#" class="yellow">Our Packages</a>
@@ -54,8 +54,8 @@
      <!-- Packages -->
 
      <section id="course">
-         <h1>Our Popular Tour Plans</h1>
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, voluptatum!</p>
+         <h1>Our Popular Packages</h1>
+         <p>A vast world awaits you for being explored!</p>
          <div class="course-box">
              <div class="courses">
                  <img src="images/tour1.jpg" alt="course 1">
@@ -211,7 +211,7 @@
 
      <section id="experts">
          <h1>Community Experts</h1>
-         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab, commodi?</p>
+         <p>There is no power for change greater than a community discovering what it cares about</p>
          <div class="expert-box">
 
             <div class="profile">
@@ -264,35 +264,35 @@
 
      <footer>
          <div class="footer-col">
-             <h3>Top Products</h3>
-             <li>Manage Reputation</li>
-             <li>Power Tools</li>
-             <li>Managed Website</li>
-             <li>Marketing Service</li>
+             <h3>Contact Info</h3>
+             <li>+918016219728</li>
+             <li>+919932349351</li>
+             <li>support@dreamtour.com</li>
+             <li>Dream Tour</li>
          </div>
          
          <div class="footer-col">
-            <h3>Top Products</h3>
-            <li>Manage Reputation</li>
-            <li>Power Tools</li>
-            <li>Managed Website</li>
-            <li>Marketing Service</li>
+            <h3>Top Packages</h3>
+            <li>Ghagra Waterfalls</li>
+            <li>Mukutmanipur Dam</li>
+            <li>Jhargram Raj-Bari</li>
+            <li>Jamuna Bridge</li>
         </div>
 
         <div class="footer-col">
-            <h3>Top Products</h3>
-            <li>Manage Reputation</li>
-            <li>Power Tools</li>
-            <li>Managed Website</li>
-            <li>Marketing Service</li>
+            <h3>Popular Destination</h3>
+            <li>Mukutmanipur</li>
+            <li>Belpahari</li>
+            <li>Jhargram</li>
+            <li>Bishnupur</li>
         </div>
 
         <div class="footer-col">
-            <h3>Top Products</h3>
-            <li>Manage Reputation</li>
-            <li>Power Tools</li>
-            <li>Managed Website</li>
-            <li>Marketing Service</li>
+            <h3>Devloper</h3>
+            <li>Chandan Mahato</li>
+            <li>Rahul Mahata</li>
+            <li>Susovon Mahata</li>
+            <li>Karuna Garai</li>
         </div>
 
         <div class="footer-col">
@@ -305,7 +305,7 @@
         </div>
 
         <div class="copyright">
-            <p>copyright 2022 All rights reserved | This Website is made by Chandan</p>
+            <p> &#169 copyright 2022 All rights reserved by Dream Tour| This Website is made by Chandan</p>
             <div class="pro-links">
                 <i class="fab fa-facebook-f"></i>
                 <i class="fab fa-instagram"></i>
